media/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
  labels:
    app: sonarr
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/instance: sonarr
    app.kubernetes.io/component: tv
    app.kubernetes.io/part-of: media
    app.kubernetes.io/managed-by: kustomize
spec:
  selector:
    matchLabels:
      app: sonarr
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sonarr
        app.kubernetes.io/name: sonarr
        app.kubernetes.io/instance: sonarr
        app.kubernetes.io/component: tv
        app.kubernetes.io/part-of: media
        app.kubernetes.io/managed-by: kustomize
      annotations:
        backup.velero.io/backup-volumes-excludes: sonarr-media
    spec:
      securityContext:
        fsGroup: 65534
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: sonarr-media
          persistentVolumeClaim:
            claimName: pvc-media-nfs
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-config-pvc
      containers:
        - name: sonarr-server
          image: linuxserver/sonarr:4.0.20 # {"$imagepolicy": "flux-system:sonarr-image-policy"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: sonarr-media
              mountPath: /media
            - name: sonarr-config
              mountPath: /config
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
