media/sonarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-ingressroute
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tv.macbytes.io`)
      kind: Rule
      services:
        - name: sonarr-svc
          port: 8989
  tls:
    secretName: sonarr-tls-certificate
